# TriQG

./: .gitignore  README.md  pyproject.toml  task.md  task_ccx.md
examples/: ccx_average_gate_fidelity.py  ccx_gate_mesolve.py  or_average_gate_fid_gaussian.py  or_average_gate_fidelity.py  or_gate_mcsolve.py  or_gate_mesolve.py  plot_pulse_sequences.py  plot_pulse_sequences_schematic.py
examples/Average_fidelity/: ccx_average_gate_fidelity.py  or_average_gate_fid_gaussian.py
examples/Average_fidelity_Vcc_newenergy/: Vcc_average_fidelity_report.typ  ccx_average_gate_fidelity.py  or_average_gate_fid_gaussian.py
examples/MCSOLVE/: ccx_gate_mcsolve.py
examples/MESOLVE/: or_gate_mesolve.py  or_gate_mesolve_gaussian.py
reference/: rydberg-control.typ
reference/essential/: eit_rydberg_parameters.typ
reference/references/: references.bib
results/: Final_three_qubit_gate_report.typ
results/OR/: or_average_gate_fidelity_record.md
results/OR/report/: paper.md  report_pulse_comparison.typ
tests/: test_analysis.py  test_atoms.py  test_decoherence.py  test_examples.py  test_hamiltonian.py  test_pulses.py  test_solver.py  test_visualization.py
triqg/: __init__.py  analysis.py  atoms.py  decoherence.py  hamiltonian.py  pulses.py  solver.py  visualization.py
