[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triqg"
version = "0.1.0"
description = "Pulse-level simulation of atomic quantum systems using QuTiP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "qutip>=5.0",
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["triqg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
